crates/compiler/zo-tokenizer/tests/snapshots/snapshots__nested_templates.snap
---
source: crates/compiler/zo-tokenizer/tests/snapshots.rs
expression: tokenization
---
tokens:
  kinds:
    - Fun
    - Ident
    - LParen
    - RParen
    - LBrace
    - Imu
    - Ident
    - TemplateAssign
    - LAngle
    - Ident
    - Ident
    - Eq
    - String
    - RAngle
    - LBrace
    - Ident
    - Dot
    - Ident
    - LParen
    - Fn
    - LParen
    - Ident
    - RParen
    - FatArrow
    - Lt
    - Ident
    - Ident
    - Eq
    - LBrace
    - Ident
    - Dot
    - Ident
    - RBrace
    - Gt
    - Lt
    - Ident
    - Gt
    - LBrace
    - Ident
    - Dot
    - Ident
    - RBrace
    - Lt
    - Slash2
    - Ident
    - Gt
    - Lt
    - Ident
    - Ident
    - Eq
    - LBrace
    - Fn
    - LParen
    - RParen
    - FatArrow
    - Ident
    - LParen
    - Ident
    - RParen
    - RBrace
    - Gt
    - Unknown
    - Unknown
    - Lt
    - Slash2
    - Ident
    - Gt
    - Lt
    - Slash2
    - Ident
    - Gt
    - RParen
    - RBrace
    - LAngle
    - Slash2
    - Ident
    - RAngle
    - Semicolon
    - Hash
    - Ident
    - Ident
    - Semicolon
    - RBrace
    - Eof
  starts:
    - 5
    - 9
    - 13
    - 14
    - 16
    - 24
    - 28
    - 33
    - 37
    - 38
    - 42
    - 47
    - 48
    - 59
    - 69
    - 70
    - 75
    - 76
    - 79
    - 80
    - 82
    - 83
    - 87
    - 89
    - 102
    - 103
    - 106
    - 109
    - 110
    - 111
    - 115
    - 116
    - 118
    - 119
    - 133
    - 134
    - 138
    - 139
    - 140
    - 144
    - 145
    - 149
    - 150
    - 151
    - 152
    - 156
    - 170
    - 171
    - 178
    - 185
    - 186
    - 187
    - 189
    - 190
    - 192
    - 195
    - 201
    - 202
    - 206
    - 207
    - 208
    - 209
    - 210
    - 211
    - 212
    - 213
    - 219
    - 231
    - 232
    - 233
    - 235
    - 245
    - 246
    - 254
    - 255
    - 256
    - 259
    - 260
    - 269
    - 270
    - 277
    - 281
    - 287
    - 291
  lengths:
    - 3
    - 4
    - 1
    - 1
    - 1
    - 3
    - 4
    - 3
    - 1
    - 3
    - 5
    - 1
    - 11
    - 1
    - 1
    - 5
    - 1
    - 3
    - 1
    - 2
    - 1
    - 4
    - 1
    - 2
    - 1
    - 2
    - 3
    - 1
    - 1
    - 4
    - 1
    - 2
    - 1
    - 1
    - 1
    - 4
    - 1
    - 1
    - 4
    - 1
    - 4
    - 1
    - 1
    - 1
    - 4
    - 1
    - 1
    - 6
    - 7
    - 1
    - 1
    - 2
    - 1
    - 1
    - 2
    - 6
    - 1
    - 4
    - 1
    - 1
    - 1
    - 1
    - 1
    - 1
    - 1
    - 6
    - 1
    - 1
    - 1
    - 2
    - 1
    - 1
    - 1
    - 1
    - 1
    - 3
    - 1
    - 1
    - 1
    - 6
    - 4
    - 1
    - 1
    - 0
  literal_indices:
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 1
    - 0
    - 0
    - 2
    - 3
    - 0
    - 0
    - 0
    - 0
    - 4
    - 0
    - 5
    - 0
    - 0
    - 0
    - 6
    - 0
    - 0
    - 0
    - 7
    - 8
    - 0
    - 0
    - 9
    - 0
    - 10
    - 0
    - 0
    - 0
    - 11
    - 0
    - 0
    - 12
    - 0
    - 13
    - 0
    - 0
    - 0
    - 14
    - 0
    - 0
    - 15
    - 16
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 17
    - 0
    - 18
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 19
    - 0
    - 0
    - 0
    - 20
    - 0
    - 0
    - 0
    - 0
    - 0
    - 21
    - 0
    - 0
    - 0
    - 22
    - 23
    - 0
    - 0
    - 0
literals:
  int_literals: []
  float_literals: []
  identifiers:
    - 25
    - 26
    - 27
    - 28
    - 30
    - 31
    - 32
    - 33
    - 34
    - 32
    - 35
    - 36
    - 32
    - 37
    - 36
    - 38
    - 39
    - 40
    - 32
    - 38
    - 33
    - 27
    - 41
    - 26
  bytes_literals: []
  char_literals: []
  string_literals:
    - 29
  interp_segments: []
  interp_ranges: []
  regex_literals: []
source_len: 291
