crates/compiler/zo-tokenizer/tests/snapshots/snapshots__realistic_program.snap
---
source: crates/compiler/zo-tokenizer/tests/snapshots.rs
expression: tokenization
---
tokens:
  kinds:
    - Pack
    - Ident
    - Semicolon
    - Load
    - Ident
    - ColonColon
    - Ident
    - ColonColon
    - LParen
    - Ident
    - Comma
    - Ident
    - RParen
    - Semicolon
    - Load
    - Ident
    - Semicolon
    - Struct
    - Ident
    - LBrace
    - Ident
    - Colon
    - F32Type
    - Comma
    - Ident
    - Colon
    - F32Type
    - Comma
    - RBrace
    - Pub
    - Fun
    - Ident
    - LParen
    - Ident
    - Colon
    - Ident
    - Comma
    - Ident
    - Colon
    - Ident
    - RParen
    - Arrow
    - F32Type
    - LBrace
    - Imu
    - Ident
    - ColonEq
    - Ident
    - Dot
    - Ident
    - Minus
    - Ident
    - Dot
    - Ident
    - Semicolon
    - Imu
    - Ident
    - ColonEq
    - Ident
    - Dot
    - Ident
    - Minus
    - Ident
    - Dot
    - Ident
    - Semicolon
    - LParen
    - Ident
    - Star
    - Ident
    - Plus
    - Ident
    - Star
    - Ident
    - RParen
    - As
    - F32Type
    - RBrace
    - Eof
  starts:
    - 5
    - 10
    - 14
    - 21
    - 26
    - 30
    - 32
    - 34
    - 36
    - 37
    - 41
    - 43
    - 49
    - 50
    - 56
    - 61
    - 65
    - 72
    - 79
    - 85
    - 93
    - 94
    - 96
    - 99
    - 107
    - 108
    - 110
    - 113
    - 119
    - 126
    - 130
    - 134
    - 142
    - 143
    - 145
    - 147
    - 152
    - 154
    - 156
    - 158
    - 163
    - 165
    - 168
    - 172
    - 180
    - 184
    - 187
    - 190
    - 192
    - 193
    - 195
    - 197
    - 199
    - 200
    - 201
    - 209
    - 213
    - 216
    - 219
    - 221
    - 222
    - 224
    - 226
    - 228
    - 229
    - 230
    - 239
    - 240
    - 243
    - 245
    - 248
    - 250
    - 253
    - 255
    - 257
    - 259
    - 262
    - 270
    - 274
  lengths:
    - 4
    - 4
    - 1
    - 4
    - 4
    - 2
    - 2
    - 2
    - 1
    - 4
    - 1
    - 6
    - 1
    - 1
    - 4
    - 4
    - 1
    - 6
    - 5
    - 1
    - 1
    - 1
    - 3
    - 1
    - 1
    - 1
    - 3
    - 1
    - 1
    - 3
    - 3
    - 8
    - 1
    - 2
    - 1
    - 5
    - 1
    - 2
    - 1
    - 5
    - 1
    - 2
    - 3
    - 1
    - 3
    - 2
    - 2
    - 2
    - 1
    - 1
    - 1
    - 2
    - 1
    - 1
    - 1
    - 3
    - 2
    - 2
    - 2
    - 1
    - 1
    - 1
    - 2
    - 1
    - 1
    - 1
    - 1
    - 2
    - 1
    - 2
    - 1
    - 2
    - 1
    - 2
    - 1
    - 2
    - 3
    - 1
    - 0
  literal_indices:
    - 0
    - 0
    - 0
    - 0
    - 1
    - 0
    - 2
    - 0
    - 0
    - 3
    - 0
    - 4
    - 0
    - 0
    - 0
    - 5
    - 0
    - 0
    - 6
    - 0
    - 7
    - 0
    - 0
    - 0
    - 8
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 9
    - 0
    - 10
    - 0
    - 11
    - 0
    - 12
    - 0
    - 13
    - 0
    - 0
    - 0
    - 0
    - 0
    - 14
    - 0
    - 15
    - 0
    - 16
    - 0
    - 17
    - 0
    - 18
    - 0
    - 0
    - 19
    - 0
    - 20
    - 0
    - 21
    - 0
    - 22
    - 0
    - 23
    - 0
    - 0
    - 24
    - 0
    - 25
    - 0
    - 26
    - 0
    - 27
    - 0
    - 0
    - 0
    - 0
    - 0
literals:
  int_literals: []
  float_literals: []
  identifiers:
    - 25
    - 26
    - 27
    - 28
    - 29
    - 30
    - 31
    - 32
    - 33
    - 34
    - 35
    - 31
    - 36
    - 31
    - 37
    - 35
    - 32
    - 36
    - 32
    - 38
    - 35
    - 33
    - 36
    - 33
    - 37
    - 37
    - 38
    - 38
  bytes_literals: []
  char_literals: []
  string_literals: []
  interp_segments: []
  interp_ranges: []
  regex_literals: []
source_len: 274
