crates/compiler/zo-tokenizer/tests/snapshots/snapshots__template.snap
---
source: crates/compiler/zo-tokenizer/tests/snapshots.rs
expression: tokenization
---
tokens:
  kinds:
    - Fun
    - Ident
    - LParen
    - RParen
    - LBrace
    - Mut
    - Ident
    - Colon
    - IntType
    - Eq
    - Int
    - Semicolon
    - Imu
    - Ident
    - Colon
    - TemplateType
    - TemplateAssign
    - TemplateFragmentStart
    - LAngle
    - Ident
    - Ident
    - Eq
    - LBrace
    - Fn
    - LParen
    - RParen
    - FatArrow
    - Ident
    - MinusEq
    - Int
    - RBrace
    - RAngle
    - TemplateText
    - LAngle
    - Slash2
    - Ident
    - RAngle
    - TemplateText
    - LBrace
    - Ident
    - RBrace
    - TemplateText
    - LAngle
    - Ident
    - Ident
    - Eq
    - LBrace
    - Fn
    - LParen
    - RParen
    - FatArrow
    - Ident
    - PlusEq
    - Int
    - RBrace
    - RAngle
    - TemplateText
    - LAngle
    - Slash2
    - Ident
    - RAngle
    - TemplateFragmentEnd
    - Semicolon
    - Hash
    - Ident
    - Ident
    - Semicolon
    - RBrace
    - Eof
  starts:
    - 5
    - 9
    - 13
    - 14
    - 16
    - 24
    - 28
    - 33
    - 35
    - 39
    - 41
    - 42
    - 51
    - 55
    - 62
    - 64
    - 68
    - 72
    - 83
    - 84
    - 91
    - 98
    - 99
    - 100
    - 102
    - 103
    - 105
    - 108
    - 114
    - 117
    - 118
    - 119
    - 120
    - 121
    - 122
    - 123
    - 129
    - 139
    - 169
    - 170
    - 175
    - 185
    - 224
    - 225
    - 232
    - 239
    - 240
    - 241
    - 243
    - 244
    - 246
    - 249
    - 255
    - 258
    - 259
    - 260
    - 261
    - 262
    - 263
    - 264
    - 270
    - 278
    - 281
    - 296
    - 297
    - 304
    - 311
    - 317
    - 321
  lengths:
    - 3
    - 4
    - 1
    - 1
    - 1
    - 3
    - 5
    - 1
    - 3
    - 1
    - 1
    - 1
    - 3
    - 7
    - 1
    - 3
    - 3
    - 2
    - 1
    - 6
    - 7
    - 1
    - 1
    - 2
    - 1
    - 1
    - 2
    - 5
    - 2
    - 1
    - 1
    - 1
    - 1
    - 1
    - 1
    - 6
    - 1
    - 30
    - 1
    - 5
    - 1
    - 39
    - 1
    - 6
    - 7
    - 1
    - 1
    - 2
    - 1
    - 1
    - 2
    - 5
    - 2
    - 1
    - 1
    - 1
    - 1
    - 1
    - 1
    - 6
    - 1
    - 3
    - 1
    - 1
    - 6
    - 7
    - 1
    - 1
    - 0
  literal_indices:
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 1
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 2
    - 0
    - 0
    - 0
    - 0
    - 0
    - 3
    - 4
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 5
    - 0
    - 1
    - 0
    - 0
    - 6
    - 0
    - 0
    - 7
    - 0
    - 8
    - 0
    - 9
    - 0
    - 10
    - 0
    - 11
    - 12
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 13
    - 0
    - 2
    - 0
    - 0
    - 14
    - 0
    - 0
    - 15
    - 0
    - 0
    - 0
    - 0
    - 16
    - 17
    - 0
    - 0
    - 0
literals:
  int_literals:
    - 0
    - 1
    - 1
  int_bases:
    - Decimal
    - Decimal
    - Decimal
  float_literals: []
  identifiers:
    - 25
    - 26
    - 27
    - 28
    - 29
    - 26
    - 30
    - 28
    - 31
    - 26
    - 32
    - 28
    - 29
    - 26
    - 33
    - 28
    - 34
    - 27
  bytes_literals: []
  char_literals: []
  string_literals: []
  interp_segments: []
  interp_ranges: []
  regex_literals: []
source_len: 321
